--- a/master.tex
+++ b/master.tex
@@ -33,6 +33,11 @@
 
 \newcommand{\SCHEME}[0]{\textsf{Scheme}}
 
+\newcommand{\exercise}[1]{%
+\section*{Exercise #1}%
+\addcontentsline{toc}{section}{Exercise #1}%
+}
+
 \begin{document}
 
 \maketitle
