* macro.tex   (QED): new command to insert a QED box.
  (lstset): fix incorrect commentstyle.

* src/ch01-ex7.ss -> src/ch01-ex07.ss: rename.

* src/ch01-ex8.ss -> src/ch01-ex08.ss: rename.

* src/ch01-newton.ss: remove the useless file.

* src/ch01-ex11.ss: add the solution of 1.11.

* src/ch01-ex12.ss: add the solution of 1.12.

* res: new directory containing images, etc.

* res/ch01-ex14.dot: add the solution of 1.14.

* ch01.tex: add the solution of 1.9-1.13.

* master.tex
  use graphics and graphicx package.

  set graphicspath.



git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@7 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/macro.tex
+++ b/macro.tex
@@ -41,6 +41,7 @@
 
 \newcommand{\TODO}{\noindent\textcolor{red}{\framebox[2\width][c]{\texttt{TODO}}}}
 
+\newcommand{\QED}{\hfill \ensuremath{\Box}}
 
 %%% Beamer %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -65,7 +66,7 @@
 \lstset{
   basicstyle=\small\ttfamily,
   keywordstyle=\bfseries\ttfamily,
-  commentstyle=\color{gray},
+  commentstyle=\color[gray]{0.4},
   numbers=left,
   numberstyle=\tiny,
   numbersep=10pt,
