--- a/master.tex
+++ b/master.tex
@@ -11,7 +11,11 @@
 \fi
 
 \usepackage{amsmath, amssymb}
+\usepackage{graphics}
 \usepackage{listings}
+
+\usepackage{graphicx}
+\graphicspath{{./res/}}
 
 \input{macro.tex}
 
