* ch01.tex, app01.tex, src/*.ml, src/*.ss   add solutions of 1.16-18.
* master.tex
  add proper space before start of sections.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@9 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -24,7 +24,17 @@
 \exercise{1.12}
 \ocamlin{./src/ch01-ex12.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.16}
+\ocamlin{./src/ch01-ex16.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.17}
+\ocamlin{./src/ch01-ex17.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.18}
+\ocamlin{./src/ch01-ex18.ml}
 
 
 %%% Local Variables: 
