--- a/master.tex
+++ b/master.tex
@@ -42,7 +42,7 @@
 \newcommand{\OCAML}[0]{\textsf{Objective-Caml}}
 
 \newcommand{\exercise}[1]{%
-\section*{Exercise #1}%
+\vspace{1em}\section*{Exercise #1}%
 \addcontentsline{toc}{section}{Exercise #1}%
 }
 
