--- a/ch01.tex
+++ b/ch01.tex
@@ -464,7 +464,7 @@ $\text{Fib}(n)=(\phi^n - \psi^n) / \sqrt{5}$임을 다음과 같이 귀납적으
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=1\textwidth]{ch01-ex14}
+  \includegraphics[width=0.9\textwidth]{ch01-ex14}
   \caption{\texttt{(count-change 11)} 계산 과정을 나타내는 트리}
   \label{fig:count-change}
 \end{figure}
@@ -493,19 +493,41 @@ $\text{Fib}(n)=(\phi^n - \psi^n) / \sqrt{5}$임을 다음과 같이 귀납적으
 \begin{enumerate}
 \item \texttt{(sine 12.15)}를 계산할 때 프로시저 \texttt{p}는 5번 적용되었다.
 \item 프로시저 \texttt{p}는 주어진 인자에 계속 3을 나눠가면서 0.1 이하가 될
-  때까지 적용된다. 즉 $\Theta(log_3n)$의 계산횟수 증가율을 보인다. 그리고
+  때까지 적용된다. 즉 $\Theta(\log_3n)$의 계산횟수 증가율을 보인다. 그리고
   계산횟수가 증가함에 따라 동일한 비율로 프로시저 \texttt{p} 호출 횟수가
-  증가하므로, 공간 증가율 역시 $\Theta(log_3n)$로 볼 수 있다.
+  증가하므로, 공간 증가율 역시 $\Theta(\log_3n)$로 볼 수 있다.
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.16}
+\schemein{./src/ch01-ex16.ss}
+
+다음은 이 구현이 실제로 반복 프로세스 방식을 따르는지를 알아보기 위해,
+\texttt{(fast-expt~3~4)}가 계산되는 과정을 나열한 것이다.
+
+\begin{scheme}
+> (fast-expt 3 4)
+> (expt-iter (1 3 4))
+> (expt-iter (1 9 2))
+> (expt-iter (1 81 1))
+> (expt-iter (81 81 0))
+81
+\end{scheme}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.17}
 
+\schemein{./src/ch01-ex17.ss}
+
+이 구현에서 프로시저가 반복되는 횟수는 \texttt{b}에 비례한다. 그런데
+프로시저가 반복될 때마다 \texttt{b}는 1이 감소하거나 반으로 줄어드므로, 반복
+횟수의 증가율은 $\Theta(\log n)$이다.
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.18}
+
+\schemein{./src/ch01-ex18.ss}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.19}
