* Makefile, res/Makefile   add Makefile.
* ch01.tex
  rectify some clumsy sentences.

* res/sicp.png, master.tex
  add the book cover to the title page.

  add links of the author and the institute.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@10 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/master.tex
+++ b/master.tex
@@ -24,14 +24,14 @@
 
 \title{
 \textsc{Structure and Interpretation}\\
-\textsc{of}\\
-\textsc{Computer Programs}\vspace{10pt}\\
+\textsc{of Computer Programs}\vspace{10pt}\\
 \textsf{Second Edition}\vspace{15pt}\\
+\includegraphics[scale=1]{sicp}\\
 \textsf{연습문제 해답}\\
 }
 \author{
-정승철 \\
-한양대학교 프로그램분석검증연구실
+\href{mailto:scjung@pav.hanyang.ac.kr}{정승철} \\
+\href{http://pav.hanyang.ac.kr}{한양대학교 프로그램 분석검증 연구실}
 }
 \date{
 마지막 고침\\
