--- a/ch01.tex
+++ b/ch01.tex
@@ -162,8 +162,8 @@
 
 \schemein{./src/ch01-ex07.ss}
 
-9,10번째 줄에 새로 정의된 \texttt{good-enough?} 프로시저가 나와 있다. 인자
-\texttt{old-guess}는 이전에 찾아낸 제곱근을, \texttt{guess}는
+9,10번째 줄에 새로 정의된 \texttt{good-enough?} 프로시저를 볼 수 있다. 이
+프로시저에서 쓰이는 인자 \texttt{old-guess}는 이전에 찾아낸 제곱근을, \texttt{guess}는
 \texttt{old-guess}를 바탕으로 좀 더 정확히 구한 제곱근을 의미한다. 이 둘
 사이의 차가 특정 수 이하가 되면 (즉, \texttt{improve} 프로시저가 만들어낸
 차이가 미미할 경우) \texttt{sqrt-iter}는 계산을 마치게 된다. 19,20번째 줄의
@@ -502,7 +502,7 @@ $\text{Fib}(n)=(\phi^n - \psi^n) / \sqrt{5}$임을 다음과 같이 귀납적으
 \exercise{1.16}
 \schemein{./src/ch01-ex16.ss}
 
-다음은 이 구현이 실제로 반복 프로세스 방식을 따르는지를 알아보기 위해,
+다음은 이 구현이 실제로 반복 프로세스 방식을 따르는지를 알아보기 위해
 \texttt{(fast-expt~3~4)}가 계산되는 과정을 나열한 것이다.
 
 \begin{scheme}
