* add solutions of 1.19, 1.20.
* macro.tex
  make comments in listings thick and italic.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@11 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -36,6 +36,10 @@
 \exercise{1.18}
 \ocamlin{./src/ch01-ex18.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.19}
+\ocamlin{./src/ch01-ex19.ml}
+
 
 %%% Local Variables: 
 %%% mode: latex
