--- a/macro.tex
+++ b/macro.tex
@@ -66,7 +66,7 @@
 \lstset{
   basicstyle=\small\ttfamily,
   keywordstyle=\ttfamily\bfseries,
-  commentstyle=\color[gray]{0.4},
+  commentstyle=\it\color[gray]{0.3},
   numbers=left,
   numberstyle=\tiny,
   numbersep=10pt,
