* add solutions of 1.22,1.23.
* resize the figure of 1.14 and put on proper place.

* macro.tex
  \schemeinp, \ocamlinp: new macros to insert a part of given source code.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@12 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -40,6 +40,14 @@
 \exercise{1.19}
 \ocamlin{./src/ch01-ex19.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.22}
+\ocamlin{./src/ch01-ex22.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.23}
+\ocamlin{./src/ch01-ex23.ml}
+
 
 %%% Local Variables: 
 %%% mode: latex
