* add and revise solutions of 1.22, 1.23, 1.24.
git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@13 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/ch01.tex
+++ b/ch01.tex
@@ -595,7 +595,7 @@ $T_{pq}^2(a,b)$는 계산 결과는 다음과 같다.
 2                                                                    ; 1
 \end{scheme}
 
-앞의 과정에서 볼 수 있듯이, normal-order 방식에서는\texttt{gcd}를 계산하는
+앞의 과정에서 볼 수 있듯이, normal-order 방식에서는 \texttt{gcd}를 계산하는
 과정에서 계산이 미뤄지는 \texttt{remainder}가 자꾸만 늘어나게 된다. 결국
 \texttt{(gcd 206 40)}을 계산하기 위해 총 18번 \texttt{remainder}를 계산해야
 한다. 이 중 대부분은 중복된 계산이다. \\
@@ -636,7 +636,7 @@ $T_{pq}^2(a,b)$는 계산 결과는 다음과 같다.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.22}
-\schemeinp{./src/ch01-ex22.ss}{30}{34}
+\schemein{./src/ch01-ex22.ss}
 
 다음은 구현한 프로그램을 이용하여 1000; 10,000; 100,000; 1,000,000 이상의 수
 중 가장 작은 소수 3개를 찾아본 것이다. 소수가 아닌 것에 대한 결과는 생략하였다.
@@ -676,16 +676,15 @@ $24 \times \sqrt{10} \simeq 75.8946$이므로 1000과 10,000에 대해서는 예
 맞지 않는다. 반면에 100,000과 1,000,000의 경우에는 $180 \times \sqrt{10}
 \simeq 569.2100$이므로 예측이 어느정도 맞는다. 즉 적은 계산량이 요구될 때는
 실제 눈에 보이는 계산 이외의 요소가 크게 작용하므로 예측에 잘 맞지 않으나, 큰
-계산량이 요구되면 그러한 부가적인 요소의 비율이 줄어들어 예측의 정확도가
+계산량이 요구되면 그러한 부가적인 요소의 차지하는 비중이 적어지므로 예측의 정확도가
 높아지게 된다.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.23}
-\schemeinp{./src/ch01-ex23.ss}{6}{13}
+\schemein{./src/ch01-ex23.ss}
 
-새로 작성한 프로그램으로 앞에서 구한 소수를 다시 구해보면 다음과 같은 결과를
-얻는다.
-
+새로 작성한 프로그램으로 앞의 소수를 다시 검사하면 다음과 같은 결과를 얻을 수
+있다.
 \begin{scheme}
 > (timed-prime-test 1009)
 
@@ -705,6 +704,54 @@ $24 \times \sqrt{10} \simeq 75.8946$이므로 1000과 10,000에 대해서는 예
 경우에는 오히려 속도가 느려지고, 나머지 두 경우에는 두 배가 아닌 대략 1.5배
 가량 빨라졌다. 이는 새로 추가된 \texttt{next} 프로시저를 계산하는 과정에서
 발생하는 부가적 비용 때문인 것으로 보인다.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.24}
+\schemein{./src/ch01-ex24.ss}
+
+새로 작성한 프로그램으로 앞의 소수를 다시 검사하면 다음과 같은 결과를 얻을 수
+있다.
+\begin{scheme}
+> (timed-prime-test 1009)
+
+1009 *** 1254
+> (timed-prime-test 10007)
+
+10007 *** 1410
+> (timed-prime-test 100003)
+
+100003 *** 2878
+> (timed-prime-test 1000003)
+
+1000003 *** 4008
+\end{scheme}
+
+$\frac{\log{1000003}}{\log{1009}} \simeq 2$이므로 1,000,003을 검사하는 것은
+1,009를 검사하는 것보다 시간이 약 두 배 정도 더 걸린다고 예측할 수 있다. 하지만
+앞의 결과에서 볼 수 있듯이 실제로는 두 배 보다 더 많은 시간이 걸린다. 이러한
+결과를 보이는 이유는 \texttt{ferma-test} 프로시저에서 알고리즘과 직접적인
+연관은 없지만 부가적으로 드는 비용 존재하기 때문이다 (예를 들어
+\texttt{random} 프로시저 계산에 따른 비용).
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.25}
+
+새로 구현된 \texttt{expmod} 프로시저가 내주는 결과는 이전 프로시저와
+동일하다. 하지만 둘 사이에는 계산 방식에서 미묘한 차이가 있다. 이전
+프로시저에서는 되도는 과정이 끝나고 이전 계산으로 돌아갈 때 나머지를
+취하면서 (\texttt{cond}의 2, 3번째 경우 참고) 돌아간다. 반면에 새로 구현된
+프로시저에서는 \texttt{fast-expt}의 되도는 과정이 완전히 끝나서 최종 결과를
+얻은 후에 나머지를 취한다. 즉 이 경우에는 나머지가 취해지지 않은 큰 수에
+대해 계속 연산을 수행해야 하므로 입력값이 커질수록 계산량이 급격히 늘어나게
+된다. 따라서 빠른 소수 검사에 적용하기엔 적합하지 않다.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.26}
+
+\texttt{square}를 사용하는 경우에는, 인자먼저 계산법에 의해 \texttt{expmod}
+프로시저가 계산된 결과를 두 번 곱한다. 하지만 제시된 코드와 같이
+\texttt{expmod}를 두 번 적으면 두 프로시저 계산의 결과가 따로 계산된 후, 그 두
+결과를 곱하므로 계산량이 두 배가 된다.
 
 
 
