--- a/app01.tex
+++ b/app01.tex
@@ -42,11 +42,33 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.22}
+
+\OCAML에서 \SCHEME의 \texttt{(runtime)}과 유사한 기능을 하는 함수는
+\texttt{Unix} 라이브러리의 \texttt{Unix} 모듈에 있는 \texttt{gettimeofday}
+함수이다. \texttt{Unix} 라이브러리는 표준 라이브러리가 아니므로 자동으로
+로드되지 않는다. 따라서 사용자가 직접 \texttt{unix.cma} 혹은
+\texttt{unix.cmxa}를 사용할 것임을 명시해야 한다\footnote{\OCAML~인터랙티브
+  환경에서는 프롬프트에서 \texttt{\#load "unix.cma"} 명령을 수행하면
+  \texttt{Unix} 모듈을 사용할 수 있다.}.
+
 \ocamlin{./src/ch01-ex22.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.23}
 \ocamlin{./src/ch01-ex23.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.24}
+
+\OCAML의 \texttt{int} 타입은 큰 수를 다룰 수가 없다. 따라서 \texttt{expmod}
+함수를 \texttt{int} 값에 대해 계산하도록 작성하면 \KOEN{정수넘침}{integer overflow}이
+발생하여 잘못된 계산이 수행될 수 있다. 이러한 문제를 해결하기 위해 여기서는
+일반적인 정수 계산 대신 \texttt{Num} 라이브러리의 \texttt{Big\_int} 모듈에서
+제공하는 함수를 사용한다. \texttt{Num} 라이브러리 또한 \texttt{Unix}
+라이브러리처럼 표준 라이브러리가 아니므로 사용자가 직접 \texttt{nums.cma} 혹은
+\texttt{nums.cmxa}를 사용할 것임을 명시해야 한다.
+
+\ocamlin{./src/ch01-ex24.ml}
 
 
 %%% Local Variables: 
