* src/ch01-ex22.ml   fix a bug of is_divides.
* add solution of 1.27.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@14 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -70,6 +70,9 @@
 
 \ocamlin{./src/ch01-ex24.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.27}
+\ocamlinp{./src/ch01-ex27.ml}{45}{55}
 
 %%% Local Variables: 
 %%% mode: latex
