* add solutions of 1.28, 1.29.
git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@15 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -74,6 +74,14 @@
 \exercise{1.27}
 \ocamlinp{./src/ch01-ex27.ml}{45}{55}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.28}
+\ocamlin{./src/ch01-ex28.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.29}
+\ocamlin{./src/ch01-ex29.ml}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "master"
