* add solutions of 1.30, 1.31.
git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@16 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -82,6 +82,19 @@
 \exercise{1.29}
 \ocamlin{./src/ch01-ex29.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.30}
+\ocamlin{./src/ch01-ex30.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.31}
+\ocamlin{./src/ch01-ex31.ml}
+
+\texttt{approx\_pi} 프로시저를 구현할 때, 주어진 식에서 분자와 분모를 따로
+구한 후 나누는 식으로(즉, \texttt{product}를 두 번 사용한 결과를 나눔) 구현하지
+않도록 한다. 이러한 방식은 비교적 큰 수를 잘 다루는 \SCHEME에서는 문제가 없으나,
+\OCAML의 경우에는 값의 한계가 있기 때문에 제대로 동작하지 않을 수 있다.
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "master"
