--- a/app01.tex
+++ b/app01.tex
@@ -92,8 +92,104 @@
 
 \texttt{approx\_pi} 프로시저를 구현할 때, 주어진 식에서 분자와 분모를 따로
 구한 후 나누는 식으로(즉, \texttt{product}를 두 번 사용한 결과를 나눔) 구현하지
-않도록 한다. 이러한 방식은 비교적 큰 수를 잘 다루는 \SCHEME에서는 문제가 없으나,
+않도록 한다. 왜냐하면 인자로 큰 값이 주어졌을때 곱해진 결과가 매우 큰 값이
+되어버리기 때문이다. 비교적 큰 수를 잘 다루는 \SCHEME에서는 문제가 없으나,
 \OCAML의 경우에는 값의 한계가 있기 때문에 제대로 동작하지 않을 수 있다.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.32}
+\ocamlin{./src/ch01-ex32.ml}
+
+\texttt{accumulate} 함수를 사용하여 \texttt{prodcut}와 \texttt{sum}을 구현할
+때 \texttt{combiner}로 쓰일 연산자를 넘기려면 \SCHEME에서와 달리 연산자를
+괄호로 묶어야 한다. 기본적으로 \OCAML의 연산자는 값처럼 다룰 수 없는
+infix 연산자이다. 예를 들어 \texttt{f a + b}는 함수 \texttt{f}에
+\texttt{a},\texttt{+},\texttt{b} 인자를 적용하는 것이 아니라, \texttt{(f a) +
+  b} 처럼 해석된다. 하지만 이러한 연산자도 괄호로 묶이면 값처럼 다룰 수
+있는(인자로 사용 가능) prefix 연산자가 된다. 다음 예를 참고하라.
+
+\begin{lstlisting}
+# 3 + 5;;
+- : int = 8
+# (+) 3 5;;
+- : int = 8
+# let apply f a b = f a b;;
+val apply : ('a -> 'b -> 'c) -> 'a -> 'b -> 'c = <fun>
+# apply + 3 5;;                    (*** same as (apply) + (3 5) ***)
+Characters 0-5:
+  apply + 3 5;;
+  ^^^^^
+Error: This expression has type ('a -> 'b -> 'c) -> 'a -> 'b -> 'c
+       but an expression was expected of type int
+# apply (+) 3 5;;
+- : int = 8
+\end{lstlisting}
+
+덧붙여 `\texttt{*}'나 `\texttt{*.}' 연산자와 같이 `\texttt{*}'로 시작하는
+연산자를 괄호로 묶을때는 여는 괄호와 `\texttt{*}'가 붙지 않게 사이에 공백을
+넣어야 한다. 만일 `\texttt{(*}'와 같이 공백을 빠트리면 이는 주석의 시작을
+의미하게 된다.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.33}
+\ocamlin{./src/ch01-ex33.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.36}
+\ocamlin{./src/ch01-ex36.ml}
+
+다음은 작성한 프로그램으로 교재에서 제시한 식의 고정점을 구해본 것이다.
+
+\begin{ocaml}
+# fixed_point (fun x -> 1.0 +. (1.0 /. x)) 1.0;;
+1: 1.
+2: 2.
+3: 1.5
+4: 1.66666666667
+5: 1.6
+6: 1.625
+7: 1.61538461538
+8: 1.61904761905
+9: 1.61764705882
+10: 1.61818181818
+11: 1.61797752809
+12: 1.61805555556
+13: 1.61802575107
+14: 1.61803713528
+15: 1.61803278689
+- : float = 1.61803278688524577
+# let average x y = (x +. y) /. 2.0;;
+val average : float -> float -> float = <fun>
+# fixed_point (fun x -> average x ((log 1000.0) /. (log x))) 10.0;;
+1: 10.
+2: 6.5
+3: 5.09521509918
+4: 4.66876068128
+5: 4.57585730577
+6: 4.55903011671
+7: 4.55613168521
+8: 4.55563720616
+9: 4.55555298755
+10: 4.5555386477
+11: 4.55553620619
+- : float = 4.55553620618503885
+\end{ocaml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.37}
+\ocamlin{./src/ch01-ex37.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.38}
+\ocamlinp{./src/ch01-ex38.ml}{10}{18}
+
+\SCHEME으로 작성할 때 소수점 이하를 없애기 위해 \texttt{floor} 프로시저를
+썻던 것과는 달리, \OCAML에서는 정수 나눗셈의 결과가 소수점이 버려진 몫이 되므로
+특별한 함수를 사용할 필요는 없다.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.39}
+\ocamlinp{./src/ch01-ex39.ml}{12}{16}
 
 %%% Local Variables: 
 %%% mode: latex
