* add solutions of 1.40-1.43.
git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@18 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -191,6 +191,22 @@ val average : float -> float -> float = <fun>
 \exercise{1.39}
 \ocamlinp{./src/ch01-ex39.ml}{12}{16}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.40}
+\ocamlinp{./src/ch01-ex40.ml}{20}{37}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.41}
+\ocamlin{./src/ch01-ex41.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.42}
+\ocamlin{./src/ch01-ex42.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.43}
+\ocamlinp{./src/ch01-ex43.ml}{3}{6}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "master"
