* add solutions of 1.44-1.46.
* macro.tex
  (FLR, CEIL): new macro

* src/ch01-ex40.ml
  (fixed_point): remove an useless parameter.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@19 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -207,6 +207,18 @@ val average : float -> float -> float = <fun>
 \exercise{1.43}
 \ocamlinp{./src/ch01-ex43.ml}{3}{6}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.44}
+\ocamlinp{./src/ch01-ex44.ml}{8}{14}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.45}
+\ocamlinp{./src/ch01-ex45.ml}{29}{35}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{1.46}
+\ocamlinp{./src/ch01-ex46.ml}{7}{27}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "master"
