--- a/macro.tex
+++ b/macro.tex
@@ -29,6 +29,9 @@
 
 \newcommand{\PAIR}[2]{\langle #1,#2 \rangle}
 
+\newcommand{\FLR}[1]{\lfloor #1 \rfloor}
+\newcommand{\CEIL}[1]{\lceil #1 \rceil}
+
 \newcommand{\bs}{\backslash}
 
 \newcommand{\set}[1]{\{#1\}}
